[package]
name = "rust-crypto"
version = "0.2.37"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/DeckerSU/rust-crypto/"
repository = "https://github.com/DeckerSU/rust-crypto/"
description = "A (mostly) pure-Rust implementation of various common cryptographic algorithms."
keywords = [ "Crypto", "MD5", "Sha1", "Sha2", "AES" ]
readme = "README.md"
build = "build.rs"

[lib]
name = "crypto"

[features]
with-bench = []

[build-dependencies]
gcc = "^0.3"

[dependencies]
time = "^0.1"
rand = "^0.3"
hex    = "0.4"
base64 = "0.21"
